--- a/apps/driver/i2c/async/i2c_multi_slave/firmware/src/config/i2c_multi_slave/harmony-manifest-success.yml
+++ b/apps/driver/i2c/async/i2c_multi_slave/firmware/src/config/i2c_multi_slave/harmony-manifest-success.yml
@@ -4,7 +4,7 @@
 
 
 project: i2c_multi_slave
-creation_date: 2023-01-23T14:12:14.245+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+creation_date: 2023-01-24T15:48:13.754+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
 operating_system: Windows 10
 mhc_mode: Standalone            # [IDE|Standalone|Headless]
 mhc_version: v3.8.5
@@ -14,7 +14,7 @@ compiler: xc32
 
 modules:
     - {name: "core", version: "v3.11.1"}
-    - {name: "csp", version: "unknown"}
-    - {name: "dev_packs", version: "unknown"}
-    - {name: "bsp", version: "unknown"}
+    - {name: "csp", version: "v3.15.0"}
+    - {name: "dev_packs", version: "v3.15.0"}
+    - {name: "bsp", version: "v3.15.0"}
 
