--- a/apps/driver/qspi_flash/sst26/src/config/pic32cx_mtsh_sb/harmony-manifest-success.yml
+++ b/apps/driver/qspi_flash/sst26/src/config/pic32cx_mtsh_sb/harmony-manifest-success.yml
@@ -4,18 +4,18 @@
 
 
 project: sst26
-creation_date: 2024-07-26T10:54:48.779+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+creation_date: 2024-11-12T15:19:58.583+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
 operating_system: Windows 10
-mcc_mode: IDE            # [IDE|Standalone|Headless]
-mcc_version: v5.5.0
-mcc_core_version: v5.7.0
-mplabx_version: v6.20        # if MPLAB X plugin only
-harmony_version: v1.5.2
-compiler: XC32 4.35
+mcc_mode: Headless            # [IDE|Standalone|Headless]
+mcc_version: v5.5.1
+mcc_core_version: v5.7.1
+mplabx_version: NA        # if MPLAB X plugin only
+harmony_version: v1.5.3
+compiler: NA
 
 modules:
-    - {name: "csp", version: "update_tmr_tgate_bit"}
-    - {name: "core", version: "at24_min_max_update"}
+    - {name: "csp", version: "v3.20.0-rc.1-98-g8589051"}
+    - {name: "core", version: "v3.13.5-51-g02657a7"}
     - {name: "CMSIS_5", version: "5.9.0"}
 
 packs:
